Bug 1986792 - Fix cut off focus border in "Manage topics" of the New Tab Customize Menu. r=home-newtab-reviewers,nbarrett,maxx
Differential Revision: https://phabricator.services.mozilla.com/D263629

--- a/browser/extensions/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
+++ b/browser/extensions/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
@@ -292,7 +292,6 @@
     .more-info-top-wrapper,
     .more-info-pocket-wrapper {
       margin-inline-start: calc(var(--space-xxsmall) * -1);
-      overflow: hidden;
 
       .more-information {
         position: relative;
